syntax = "proto3";

package file_logger_service;
<<<<<<< HEAD
=======

// Importing session.proto - A file used in NI gRPC Device Server.
import "session.proto"; 
>>>>>>> c0203f120d2cd06892bac598e3b499b588858537

service FileLoggerService {
  rpc InitializeFile(InitializeFileRequest) returns (InitializeFileResponse);
  rpc LogData(LogDataRequest) returns (LogDataResponse);
  rpc CloseFile(CloseFileRequest) returns (CloseFileResponse);
}

message InitializeFileRequest {
  // The complete file path.
  string file_path = 1;
  // Defines how the session should be initialized.
<<<<<<< HEAD
  SessionInitializationBehavior initialization_behavior = 2;
=======
  nidevice_grpc.SessionInitializationBehavior initialization_behavior = 2;
>>>>>>> c0203f120d2cd06892bac598e3b499b588858537
}

message InitializeFileResponse {
  string session_name = 1;
  bool new_session = 2;
}

message LogDataRequest {
  string session_name = 1;
  string content = 2;
}

// Empty response message; success is indicated by the gRPC status code.
message LogDataResponse {
}

message CloseFileRequest {
  string session_name = 1;
}

message CloseFileResponse {
}
<<<<<<< HEAD

enum SessionInitializationBehavior {
   // Automatically decide whether to initialize new or attach.
  SESSION_INITIALIZATION_BEHAVIOR_UNSPECIFIED = 0;
  SESSION_INITIALIZATION_BEHAVIOR_INITIALIZE_NEW = 1;
  SESSION_INITIALIZATION_BEHAVIOR_ATTACH_TO_EXISTING = 2;
}
=======
>>>>>>> c0203f120d2cd06892bac598e3b499b588858537
